--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-google-maps/api": "^2.20.8",
     "@tanstack/react-table": "^8.21.3",
     "@tiptap/extension-image": "^3.10.7",
     "@tiptap/react": "^3.10.7",
@@ -75,6 +76,7 @@
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
     "@radix-ui/react-toggle": "^1.1.10",
+    "@types/google.maps": "^3.58.1",
     "@types/leaflet": "^1.9.12",
     "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
